# libgit

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: tests.yaml
cmake/: deps.cmake  options.cmake
include/: CMakeLists.txt  reference.h  repository.h  status.h
include/libgit/: CMakeLists.txt  diff_delta.h  diff_file.h  init.h  libgit.h  object.h  object_id.h  reference.h  repository.h  status.h
src/: CMakeLists.txt  init.cpp  libgit.cpp  reference.cpp  repository.cpp  status.cpp
tests/: CMakeLists.txt
tests/binary/: CMakeLists.txt
tests/binary/bt_repository/: CMakeLists.txt  bt_repository.cpp
tests/binary/repository/: CMakeLists.txt  repository.cpp
tests/cmake/: create_test.cmake
tests/common/: git_commands.h
tests/mocks/: CMakeLists.txt
tests/mocks/libgit2/: CMakeLists.txt  mock_repository.h
tests/unit/: CMakeLists.txt
tests/unit/repository/: CMakeLists.txt  repository.cpp
